--- a/package.json
+++ b/package.json
@@ -12,6 +12,11 @@
     "@coreui/coreui": "^5.0.1",
     "@coreui/vue": "^5.0.0",
     "@fortawesome/fontawesome-free": "^6.5.2",
+    "@fortawesome/fontawesome-svg-core": "^6.5.2",
+    "@fortawesome/free-brands-svg-icons": "^6.5.2",
+    "@fortawesome/free-regular-svg-icons": "^6.5.2",
+    "@fortawesome/free-solid-svg-icons": "^6.5.2",
+    "@fortawesome/vue-fontawesome": "^3.0.6",
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.3",
     "sass": "^1.77.1",
